AX: AXIsolatedTree::children() should not re-initialize m_children unless they've changed https://bugs.webkit.org/show_bug.cgi?id=262934 rdar://problem/116715426

Reviewed by Chris Fleizach.

This saves 4.3k samples on an internal webpage.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::detachRemoteParts):
(WebCore::AXIsolatedObject::setChildrenIDs):
(WebCore::AXIsolatedObject::children):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::applyPendingChanges):

Canonical link: https://commits.webkit.org/269170@main